[package]
name = "permission-translation"
version = "0.2.0"
edition = "2021"
description = "A library for translating hexadecimal permission values into human-readable capability sets"
license = "MIT OR Apache-2.0"
authors = ["Hugo Ponthieu <hugopont08@gmail.com>"]
repository = "https://github.com/hugoponthieu/permission-translation"
homepage = "https://github.com/hugoponthieu/permission-translation"
keywords = ["permissions", "capabilities", "hex", "translation", "security"]
categories = ["authentication", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/permission-translation"

[lib]
doc = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "validation_showcase"
path = "examples/validation_showcase.rs"

[dependencies]
