[package]
name = "permission-translation"
version = "0.3.0"
edition = "2021"
description = "A library for translating hexadecimal permission values into human-readable capability sets"
license = "MIT OR Apache-2.0"
authors = ["Hugo Ponthieu <hugopont08@gmail.com>"]
repository = "https://github.com/hugoponthieu/permission-translation"
homepage = "https://github.com/hugoponthieu/permission-translation"
keywords = ["permissions", "capabilities", "hex", "translation", "security"]
categories = ["authentication", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/permission-translation"


[lib]
name = "permission_translation"
path = "src/lib.rs"
doc = true
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "validation_showcase"
path = "examples/validation_showcase.rs"

[[example]]
name = "wasm_example"
path = "examples/wasm_example.rs"

[dependencies]
wasm-bindgen = { version = "0.2.104", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
]

[dependencies.js-sys]
version = "0.3"
optional = true

[features]
default = []
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen", "web-sys", "js-sys"]
